--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -1,45 +1,29 @@
-# This file is necessary to install dbt-utils with dbt deps
-# the content will be overwritten by the transform function
-
-# Name your package! Package names should contain only lowercase characters
-# and underscores. A good package name should reflect your organization's
-# name or the intended use of these models
-name: 'airbyte_utils'
+name: airbyte_utils
 version: '1.0'
 config-version: 2
-
-# This setting configures which "profile" dbt uses for this project. Profiles contain
-# database connection information, and should be configured in the  ~/.dbt/profiles.yml file
-profile: 'normalize'
-
-# These configurations specify where dbt should look for different types of files.
-# The `source-paths` config, for example, states that source models can be found
-# in the "models/" directory. You probably won't need to change these!
-source-paths: ["models"]
-docs-paths: ["docs"]
-analysis-paths: ["analysis"]
-test-paths: ["tests"]
-data-paths: ["data"]
-macro-paths: ["macros"]
-
-target-path: "../build"  # directory which will store compiled SQL files
-log-path: "../logs"  # directory which will store DBT logs
-modules-path: "../dbt_modules"  # directory which will store external DBT dependencies
-
-clean-targets:         # directories to be removed by `dbt clean`
-    - "build"
-    - "dbt_modules"
-
+profile: normalize
+model-paths:
+- models
+docs-paths:
+- docs
+analysis-paths:
+- analysis
+test-paths:
+- tests
+seed-paths:
+- data
+macro-paths:
+- macros
+target-path: ../build
+log-path: ../logs
+packages-install-path: ../dbt
+clean-targets:
+- build
+- dbt_modules
 quoting:
   database: true
-# Temporarily disabling the behavior of the ExtendedNameTransformer on table/schema names, see (issue #1785)
-# all schemas should be unquoted
   schema: false
   identifier: true
-
-# You can define configurations for models in the `source-paths` directory here.
-# Using these configurations, you can enable or disable models, change how they
-# are materialized, and more!
 models:
   airbyte_utils:
     +materialized: table
@@ -57,7 +41,15 @@ models:
       airbyte_views:
         +tags: airbyte_internal_views
         +materialized: view
-
 dispatch:
-  - macro_namespace: dbt_utils
-    search_order: ['airbyte_utils', 'dbt_utils']
+- macro_namespace: dbt_utils
+  search_order:
+  - airbyte_utils
+  - dbt_utils
+vars:
+  json_column: _airbyte_data
+  models_to_source:
+    se_orders_ab1: selly_express._airbyte_raw_se_orders
+    se_orders_ab2: selly_express._airbyte_raw_se_orders
+    se_orders_ab3: selly_express._airbyte_raw_se_orders
+    se_orders: selly_express._airbyte_raw_se_orders
